# substrate-betting

./: Cargo.toml  README.md  lib_struct.rs
rpc/: Cargo.toml
rpc/runtime-api/: Cargo.toml
rpc/runtime-api/src/: lib.rs
rpc/src/: lib.rs
src/: benchmarking.rs  lib.rs  mock.rs  rpc.rs  tests.rs  weights.rs
