[package]
name = "pallet-betting-rpc"
version = "0.0.1"
edition = "2021"
authors = ["Alex Bean <alejandro.bean@parity.io>"]
description = 'RPC methods for the betting pallet'
publish = false
repository = "https://github.com/AlexD10S/substrate-betting"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }

# Substrate packages
sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-blockchain = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }

# local packages
pallet-betting-rpc-runtime-api = { path = "./runtime-api", default-features = false }
