[package]
name = "pallet-betting-rpc-runtime-api"
authors = ["Alex Bean <alejandro.bean@parity.io>"]
version = "0.0.1"
description = "RPC runtime API fot the betting pallet"
edition = "2021"
publish = false
repository = "https://github.com/AlexD10S/substrate-betting"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32", default-features = false }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.32" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
jsonrpsee = { version = "0.15.1", features = ["server"] }
pallet-betting = { version = "0.0.3", default-features = false, path = "../.." }

[features]
default = ["std"]
std = [
	"sp-api/std",
]